# agentiam

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
.claude/commands/: review.md
.github/workflows/: ci.yml
api/: openapi.yaml
benches/: authorize_bench.rs
docs/: api.md  cedar-vs-opa.md  design.md  schema-design.md  token-service.md
openspec/changes/phase1-mvp/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/phase1-mvp/specs/: spec.md
openspec/changes/phase2-mcp-gateway/: .openspec.yaml  proposal.md
openspec/specs/: spec.md
policies/: guardrails.cedar
policies/examples/: basic-rbac.cedar  delegation.cedar
schemas/: agentiam.cedarschema
scripts/: pre-push-review.sh
src/: config.rs  error.rs  lib.rs  main.rs  metadata.rs  models.rs
src/api/: error.rs  middleware.rs  mod.rs  router.rs
src/api/handlers/: audit.rs  auth.rs  authorize.rs  entities.rs  health.rs  mod.rs  policies.rs  sessions.rs
src/audit/: logger.rs  mod.rs  query.rs
src/auth/: context.rs  mod.rs  service.rs
src/cedar/: engine.rs  entities.rs
src/session/: jwt.rs  manager.rs  mod.rs
src/token/: apikey.rs  mod.rs  oauth.rs
tests/: integration.rs  integration_test.rs  oauth_http_test.rs
