[package]
name = "agentiam"
version = "0.1.0"
edition = "2024"
autobenches = false

[dependencies]
cedar-policy = "4.3"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
sha2 = "0.10"
rand = "0.9"
dashmap = "6"
tower = "0.5"
http-body-util = "0.1"

[dev-dependencies]
futures = "0.3"

[[test]]
name = "authorize_bench"
path = "benches/authorize_bench.rs"
